--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MiniTube+</title>
+  <title>MiniTube</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="topbar">
-  <div class="logo">MiniTube+ 🎬</div>
-  <input type="text" placeholder="Search shows..." />
-  <div class="user">👤</div>
+  <div class="logo">MiniTube 🎬</div>
+  <input type="text" id="search" placeholder="Search videos..." />
 </header>
 
-<div class="section">
-  <h2>🎌 Anime</h2>
+<section class="section">
+  <h2>Anime</h2>
   <div class="row" id="anime"></div>
-</div>
+</section>
 
-<div class="section">
-  <h2>🎬 Movies</h2>
+<section class="section">
+  <h2>Movies</h2>
   <div class="row" id="movies"></div>
-</div>
+</section>
 
-<div class="section">
-  <h2>⚽ Sports</h2>
+<section class="section">
+  <h2>Sports</h2>
   <div class="row" id="sports"></div>
-</div>
+</section>
 
-<div class="section">
-  <h2>📺 Web Series</h2>
+<section class="section">
+  <h2>Web Series</h2>
   <div class="row" id="series"></div>
+</section>
+
+<!-- Video Modal -->
+<div id="videoModal" class="modal">
+  <div class="modal-content">
+    <span id="closeBtn">&times;</span>
+    <iframe id="ytplayer" width="100%" height="400"
+      src="" frameborder="0"
+      allow="autoplay; encrypted-media" allowfullscreen>
+    </iframe>
+  </div>
 </div>
 
 <script src="script.js"></script>
