--- a/app/index.html
+++ b/app/index.html
@@ -7,21 +7,39 @@
 <body>
 
 <header class="topbar">
-  <div class="logo">🎬 MiniTube</div>
-  <input type="text" placeholder="Search videos..." />
-  <div class="user">👤</div>
+  <div class="logo">MiniTube 🎬</div>
+  <input type="text" id="search" placeholder="Search videos..." />
 </header>
 
-<div class="container">
-  <aside class="sidebar">
-    <p>🏠 Home</p>
-    <p>🔥 Trending</p>
-    <p>📺 Subscriptions</p>
-    <p>🎵 Music</p>
-    <p>🎮 Gaming</p>
-  </aside>
+<section class="section">
+  <h2>Anime</h2>
+  <div class="row" id="anime"></div>
+</section>
 
-  <main class="videos" id="videos"></main>
+<section class="section">
+  <h2>Movies</h2>
+  <div class="row" id="movies"></div>
+</section>
+
+<section class="section">
+  <h2>Sports</h2>
+  <div class="row" id="sports"></div>
+</section>
+
+<section class="section">
+  <h2>Web Series</h2>
+  <div class="row" id="series"></div>
+</section>
+
+<!-- Video Modal -->
+<div id="videoModal" class="modal">
+  <div class="modal-content">
+    <span id="closeBtn">&times;</span>
+    <iframe id="ytplayer" width="100%" height="400"
+      src="" frameborder="0"
+      allow="autoplay; encrypted-media" allowfullscreen>
+    </iframe>
+  </div>
 </div>
 
 <script src="script.js"></script>
