--- a/app/index.html
+++ b/app/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MiniTube</title>
+
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="topbar">
-  <div class="logo">MiniTube 🎬</div>
-  <input type="text" id="search" placeholder="Search videos..." />
+  <div class="logo">🎬 MiniTube</div>
+  <input type="text" id="searchInput" placeholder="Search videos..." />
 </header>
 
-<section class="section">
-  <h2>Anime</h2>
-  <div class="row" id="anime"></div>
-</section>
+<div class="container">
+  <aside class="sidebar">
+    <p><i class="fa-solid fa-house"></i> Home</p>
+    <p><i class="fa-solid fa-fire"></i> Trending</p>
+    <p><i class="fa-solid fa-tv"></i> Web Series</p>
+    <p><i class="fa-solid fa-film"></i> Movies</p>
+    <p><i class="fa-solid fa-futbol"></i> Sports</p>
+  </aside>
 
-<section class="section">
-  <h2>Movies</h2>
-  <div class="row" id="movies"></div>
-</section>
-
-<section class="section">
-  <h2>Sports</h2>
-  <div class="row" id="sports"></div>
-</section>
-
-<section class="section">
-  <h2>Web Series</h2>
-  <div class="row" id="series"></div>
-</section>
+  <main class="videos" id="videos"></main>
+</div>
 
 <!-- Video Modal -->
-<div id="videoModal" class="modal">
+<div class="modal" id="videoModal">
   <div class="modal-content">
-    <span id="closeBtn">&times;</span>
-    <iframe id="ytplayer" width="100%" height="400"
-      src="" frameborder="0"
-      allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>
+    <span id="closeModal">&times;</span>
+    <iframe id="videoPlayer" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
   </div>
 </div>
 
